@@ -1,4 +1,6 @@
 ver 0.22.1 (not yet released)
+* output
+  - alsa: don't deadlock when the ALSA driver is buggy
 
 ver 0.22 (2020/09/23)
 * protocol
